# slinky

./: Cargo.toml  README.md
slinky-bin/: Cargo.toml  main.rs
slinky-extension/: background.js  content.js  manifest.json  popup.html  popup.js  report.html  report.js
slinky-lib/: Cargo.toml
slinky-lib/src/: checker.rs  lib.rs
src/: lib.rs
