[package]
name = "slinky_lib"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlAnchorElement",
    "Window",
    "Document",
    "HtmlCollection",
] }

[lib]
crate-type = ["cdylib", "rlib"]
name = "slinky_lib"
path = "src/lib.rs"
